Create Benh nhân

--- a/WebPhongKhamNhi/Views/HoaDonThuoc/Details.cshtml
+++ b/WebPhongKhamNhi/Views/HoaDonThuoc/Details.cshtml
@@ -31,7 +31,7 @@
         </dd>
     </dl>
     <h3>Chi tiết hóa đơn thuốc</h3>
-    <a asp-action="CreateCTHDT" asp-route-mahoadon="@Model.MaHoaDon" style="display:block" ><button class="btn btn-primary">Thêm thuốc vào hóa đơn thuốc</button></a>
+    <button class="btn btn-primary" style="display:block"><a asp-action="CreateCTHDT" asp-route-mahoadon="@Model.MaHoaDon" class="text-light text-decoration-none">Thêm thuốc vào hóa đơn thuốc</a></button>
     
     <br />
     <table class="table table-sm">
