--- a/WebPhongKhamNhi/Views/HoaDonThuoc/CreateCTHDT.cshtml
+++ b/WebPhongKhamNhi/Views/HoaDonThuoc/CreateCTHDT.cshtml
@@ -22,12 +22,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="SoLuong" class="control-label"></label>
-                <input asp-for="SoLuong" class="form-control" />
+                <input asp-for="SoLuong" class="form-control"  min="1" value="1" />
                 <span asp-validation-for="SoLuong" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Gia" class="control-label"></label>
-                <input asp-for="Gia" class="form-control" min="1" value="1"/>
+                <input asp-for="Gia" class="form-control" min="1"/>
                 <span asp-validation-for="Gia" class="text-danger"></span>
             </div>
             
