--- a/WebPhongKhamNhi/Views/PhieuNhapThuoc/Index.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuNhapThuoc/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Thêm phiếu nhập thuôcs</a>
+    <a asp-action="Create">Thêm phiếu nhập thuốc</a>
 </p>
 <table class="table">
     <thead>
