--- a/WebPhongKhamNhi/Views/BenhNhan/Details.cshtml
+++ b/WebPhongKhamNhi/Views/BenhNhan/Details.cshtml
@@ -10,56 +10,76 @@
     <h4>Benhnhan</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.HoTen)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.HoTen)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NgaySinh)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NgaySinh)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DiaChi)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DiaChi)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TenTaiKhoan)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TenTaiKhoan)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MatKhau)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MatKhau)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TenNguoiThan)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TenNguoiThan)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SoDienThoai)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SoDienThoai)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.LoaiTaiKhoan)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LoaiTaiKhoan)
-        </dd>
-    </dl>
+
+        @if (Model.LoaiTaiKhoan == 0)
+        {
+            <dd class="col-sm-10">
+                User
+            </dd>
+        }
+        else if (Model.LoaiTaiKhoan == 1)
+        {
+            <dd class="col-sm-10">
+                Admin
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+               
+            </dd>
+        }
 </div>
+<form action="/HoSoKham/GetHoSoTheoBenhNhan" method="get">
+    <input type="hidden"  name="id" value="@Model.MaBenhNhan" />
+    <button type="submit" class="btn btn-primary">Danh sách hồ sơ khám</button>
+</form>
+
 <div>
     <a asp-action="Edit" asp-route-id="@Model.MaBenhNhan">Edit</a> |
     <a asp-action="Index">Back to List</a>
