--- a/WebPhongKhamNhi/Views/DonThuoc/Details.cshtml
+++ b/WebPhongKhamNhi/Views/DonThuoc/Details.cshtml
@@ -65,5 +65,10 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Quay lại</a>  
+    <br />
+    <form action="/DonThuoc/GetDonThuocTheoHoSo" method="get">
+        <input type="hidden" name="id" value="@Model.MaHoSo" />
+        <button type="submit" class="btn btn-primary">Danh sách đơn thuốc</button>
+    </form>
 </div>
