--- a/WebPhongKhamNhi/Views/PhieuXetNghiem/Details.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuXetNghiem/Details.cshtml
@@ -69,5 +69,9 @@
 </div>
 
 <div>
-      <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Quay lại</a>
+    <form action="/PhieuXetNghiem/GetPXNTheoHoSo" method="get">
+        <input type="hidden" name="id" value="@Model.MaHoSo" />
+        <button type="submit" class="btn btn-primary">Danh sách phiếu xét nghiệm</button>
+    </form>
 </div>
