--- a/WebPhongKhamNhi/Views/DonThuoc/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/DonThuoc/Delete.cshtml
@@ -8,26 +8,28 @@
 
 <h3>Bạn có muốn xóa không</h3>
 <div>
-    
+
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.TenDonThuoc)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TenDonThuoc)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MaHoSoNavigation)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.MaHoSoNavigation.MaHoSo)
-        </dd class>
+        </dd>
     </dl>
-    
+
     <form asp-action="DeletePost">
+        <input type="hidden" name="mahoso" value="@Model.MaHoSo" />
         <input type="hidden" asp-for="MaDonThuoc" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+
     </form>
+    <a asp-action="GetDonThuocTheoHoSo" asp-route-id="@Model.MaHoSo">Back to List</a>
 </div>
