--- a/WebPhongKhamNhi/Views/DonThuoc/GetDonThuocTheoHoSo.cshtml
+++ b/WebPhongKhamNhi/Views/DonThuoc/GetDonThuocTheoHoSo.cshtml
@@ -2,43 +2,179 @@
 
 @{
     ViewData["Title"] = "GetDonThuocTheoHoSo";
+    int i = 1;
 }
-
-<h1>GetDonThuocTheoHoSo</h1>
-
+<h1>Đơn Thuốc</h1>
+<hr />
+<h4>Tìm kiếm theo mã đơn thuốc và tên đơn thuốc</h4>
+<form asp-action="GetDonThuocTheoHoSo" method="post">
+    <input type="text" name="keyword" /> 
+    <input type="hidden" name="id" value="@ViewBag.MaHoSo" />  
+    <button type="submit">Tìm kiếm</button>
+</form>
+<br />
 <p>
-    <a asp-action="CreateDonThuocTheoHoSo" asp-route-id="@ViewBag.MaHoSo">Create New</a>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Thêm đơn thuốc
+    </button>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TenDonThuoc)
+                STT
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.MaHoSoNavigation)
+                Mã đơn thuốc
             </th>
+            <th>
+                Mã hồ sơ
+            </th>
+            <th>
+                Tên đơn thuốc
+            </th>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.TenDonThuoc)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaHoSoNavigation.MaHoSo)
-            </td>
-            <td>
-                <a asp-action="EditDonThuocTheoHoSo" asp-route-id="@item.MaDonThuoc">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaDonThuoc">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaDonThuoc">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @(i++)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaDonThuoc)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaHoSo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TenDonThuoc)
+                </td>
+
+                <td>
+
+                    <a asp-action="Details" asp-route-id="@item.MaDonThuoc">Chi tiết</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MaDonThuoc">Xóa</a>
+                </td>
+            </tr>
+        }
     </tbody>
-</table> 
-<p>
-    <a asp-action="Details" asp-controller="HoSoKham" asp-route-id="@ViewBag.MaHoSo">Quay lại hồ sơ</a>
-</p>
+</table>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content" style="width:800px">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Tạo mới đơn thuốc</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="form_data" asp-action="CreateDonThuocTheoHoSo">
+                    <label>Tên đơn thuốc</label>
+                    <input type="text" name="tendonthuoc" /> 
+                    <input type="hidden" name="mahoso" value="@ViewBag.MaHoSo"/> 
+
+                    <table class="table table-striped" id="tblChiTietDonThuoc">
+
+                        <tr class="trAppend" style="display:none">
+                            <td>
+                                <select class="txtSanPhamId form-control">
+                                    @foreach (var item in ViewBag.Thuoc)
+                                    {
+                                        <option value="@item.MaThuoc">@item.Ten</option>
+                                    }
+                                </select>
+                            </td>
+                            <td>
+                                <input type="number" class="txtSoLuong form-control" min="0" value="0" />
+                            </td>
+                            <td>
+                                <textarea type="text" class="txtHuongDanSuDung form-control"></textarea>
+                            </td>
+                            <td><span class="btnDelete btn btn-danger">-</span></td>
+                        </tr>
+                        <tr class="trFirstChild" data-id="-1">
+                            <th style="width:35%">Chọn thuốc</th>
+                            <th style="width:20%">Số Lượng</th>
+                            <th style="width:35%">Hướng dẫn sử dụng</th>
+                            <th style="width:10%"></th>
+                        </tr>
+
+                    </table>
+
+                    <div class="modal-footer">
+                        <button class="btn btn-success ml-3 mr-2" id="btnAdd" type="button">
+                            Thêm thuốc
+                        </button>
+                        <button type="submit" class="btn btn-primary">Lưu</button>
+                    </div>
+                </form>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
+@section Scripts{
+    <script>
+        $("#btnAdd").click(function () {
+
+            var id_cuoi = $("#tblChiTietDonThuoc").find("tr:last-child").attr("data-id");
+            i = parseInt(id_cuoi) + 1;
+            var tdNoiDung = $(".trAppend").html();
+            var trNoiDung = "<tr class=\"trAppended\" id=\"" + i + "\" data-id=\"" + i + "\">" + tdNoiDung + "</tr>";
+            $("#tblChiTietDonThuoc").append(trNoiDung);
+            loadIDLenThe();
+        });
+
+        function loadIDLenThe() {
+            $(".trAppended").each(function () {
+                var id = $(this).attr("data-id");
+                var sanPhamId = "[" + id + "].MaThuoc";
+                var soLuong = "[" + id + "].SoLuong";
+                var huongDanSuDung = "[" + id + "].HuongDanSuDung";
+
+
+                $(this).find(".txtSanPhamId").prop("name", sanPhamId);
+                $(this).find(".txtSoLuong").prop("name", soLuong);
+                $(this).find(".txtHuongDanSuDung").prop("name", huongDanSuDung);
+
+            });
+        };
+
+        function CapNhapID() {
+            var id_cuoi = $("#tblChiTietDonThuoc").find(".trFirstChild").attr("data-id");
+            i = parseInt(id_cuoi) + 1;
+
+            $(".trAppended").each(function () {
+                var id = i;
+                $(this).attr("data-id", i);
+
+                var sanPhamId = "[" + id + "].MaThuoc";
+                var soLuong = "[" + id + "].SoLuong";
+                var huongDanSuDung = "[" + id + "].HuongDanSuDung";
+
+
+                $(this).find(".txtSanPhamId").prop("name", sanPhamId);
+                $(this).find(".txtSoLuong").prop("name", soLuong);
+                $(this).find(".txtHuongDanSuDung").prop("name", huongDanSuDung);
+                i++;
+            });
+        };
+
+        $("body").delegate(".btnDelete", "click", function () {
+            $(this).closest(".trAppended").remove();
+            CapNhapID();
+        });
+
+    </script>
+}
