--- a/WebPhongKhamNhi/Views/PhieuXetNghiem/GetPXNTheoHoSo.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuXetNghiem/GetPXNTheoHoSo.cshtml
@@ -1,50 +1,172 @@
 ﻿@model IEnumerable<WebPhongKhamNhi.Models.Phieuxetnghiem>
 
 @{
-    ViewData["Title"] = "GetPXNTheoHoSo";
+    ViewData["Title"] = "Index";
+    int i = 1;
 }
 
-<h1>GetPXNTheoHoSo</h1>
-
+<h1>Phiếu xét nghiệm</h1> 
+<br />
+<h4>Tìm kiếm theo mã phiếu xét nghiệm và ngày thanh toán</h4>
+<form asp-action="GetPXNTheoHoSo" method="post">
+    <input type="text" name="keyword" />
+    <input type="hidden" name="id" value="@ViewBag.MaHoSo" />
+    <button type="submit">Tìm kiếm</button>
+</form>
+<br />
 <p>
-    <a asp-action="CreatePXNTheoHoSo" asp-route-id="@ViewBag.MaHoSo">Create New</a>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+        Thêm phiếu xét nghiệm
+    </button>
 </p>
 <table class="table">
     <thead>
         <tr>
+            <th>
+                STT
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MaPhieuXetNghiem)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.NgayThanhToan)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.TongTien)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MaHoSoNavigation)
-            </th>
+
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.NgayThanhToan)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TongTien)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.MaHoSoNavigation.MaHoSo)
-            </td>
-            <td>
-                <a asp-action="EditPXNTheoHoSo" asp-route-id="@item.MaPhieuXetNghiem">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.MaPhieuXetNghiem">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.MaPhieuXetNghiem">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @(i++)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.MaPhieuXetNghiem)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.NgayThanhToan)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.TongTien)
+                </td>
+
+                <td>
+
+                    <a asp-action="Details" asp-route-id="@item.MaPhieuXetNghiem">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.MaPhieuXetNghiem">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
-</table> 
-<p>
-    <a asp-action="Details" asp-controller="HoSoKham" asp-route-id="@ViewBag.MaHoSo">Quay lại hồ sơ</a>
-</p>
+</table>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content" style="width:800px">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Tạo mới phiếu xét nghiệm</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="form_data" asp-action="CreatePXNTheoHoSo"> 
+
+                    <input type="hidden" name="mahoso" value="@ViewBag.MaHoSo" />
+
+                    <table class="table table-striped" id="tblChiTietPhieuXetNghiem">
+
+                        <tr class="trAppend" style="display:none">
+                            <td>
+                                <select class="txtSanPhamId form-control">
+                                    @foreach (var item in ViewBag.Dichvuxetnghiem)
+                                    {
+                                        <option value="@item.MaXetNghiem">@item.TenXetNghiem</option>
+                                    }
+                                </select>
+                            </td>
+                            <td>
+                                <input type="number" class="txtChiPhi form-control" min="0" value="0" />
+                            </td>
+                            <td><span class="btnDelete btn btn-danger">-</span></td>
+                        </tr>
+                        <tr class="trFirstChild" data-id="-1">
+                            <th style="width:40%">Chọn xét nghiệm</th>
+                            <th style="width:20%">Chi Phí</th>
+                            <th style="width:10%"></th>
+                        </tr>
+
+                    </table>
+
+                    <div class="modal-footer">
+                        <button class="btn btn-success ml-3 mr-2" id="btnAdd" type="button">
+                            Thêm xét nghiệm
+                        </button>
+                        <button type="submit" class="btn btn-primary">Lưu</button>
+                    </div>
+                </form>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+
+@section Scripts{
+    <script>
+        $("#btnAdd").click(function () {
+
+            var id_cuoi = $("#tblChiTietPhieuXetNghiem").find("tr:last-child").attr("data-id");
+            i = parseInt(id_cuoi) + 1;
+            var tdNoiDung = $(".trAppend").html();
+            var trNoiDung = "<tr class=\"trAppended\" id=\"" + i + "\" data-id=\"" + i + "\">" + tdNoiDung + "</tr>";
+            $("#tblChiTietPhieuXetNghiem").append(trNoiDung);
+            loadIDLenThe();
+        });
+
+        function loadIDLenThe() {
+            $(".trAppended").each(function () {
+                var id = $(this).attr("data-id");
+                var sanPhamId = "[" + id + "].MaXetNghiem";
+                var chiPhi = "[" + id + "].ChiPhi";
+
+
+                $(this).find(".txtSanPhamId").prop("name", sanPhamId);
+                $(this).find(".txtChiPhi").prop("name", chiPhi);
+
+            });
+        };
+
+        function CapNhapID() {
+            var id_cuoi = $("#tblChiTietPhieuXetNghiem").find(".trFirstChild").attr("data-id");
+            i = parseInt(id_cuoi) + 1;
+
+            $(".trAppended").each(function () {
+                var id = i;
+                $(this).attr("data-id", i);
+
+                var sanPhamId = "[" + id + "].MaXetNghiem";
+                var chiPhi = "[" + id + "].ChiPhi";
+
+
+                $(this).find(".txtSanPhamId").prop("name", sanPhamId);
+                $(this).find(".txtChiPhi").prop("name", chiPhi);
+                i++;
+            });
+        };
+
+        $("body").delegate(".btnDelete", "click", function () {
+            $(this).closest(".trAppended").remove();
+            CapNhapID();
+        });
+
+    </script>
+}
