--- a/WebPhongKhamNhi/Views/Shared/_AdminLayout.cshtml
+++ b/WebPhongKhamNhi/Views/Shared/_AdminLayout.cshtml
@@ -95,34 +95,41 @@
 
             <!-- Heading -->
             @*<div class="sidebar-heading">
-            Addons
-            </div>*@
+        Addons
+        </div>*@
 
-          
-           
+
+
 
             <!-- Nav Item - Charts -->
             <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/PhieuDangKyKham">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>Danh sách đăng ký khám</span>
                 </a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="/DichVuKham">
+                    <i class="fas fa-fw fa-chart-area"></i>
+                    <span>Dịch vụ khám</span>
+                </a>
+            </li>
+
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
-            <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
-               aria-expanded="true" aria-controls="collapsePages">
-                <i class="fas fa-fw fa-folder"></i>
-                <span>Thống kê</span>
-            </a>
-            <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
-                <div class="bg-white py-2 collapse-inner rounded">
-                    
-                    <a class="collapse-item" href="#">Doanh số</a>
-                    
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapsePages"
+                   aria-expanded="true" aria-controls="collapsePages">
+                    <i class="fas fa-fw fa-folder"></i>
+                    <span>Thống kê</span>
+                </a>
+                <div id="collapsePages" class="collapse" aria-labelledby="headingPages" data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+
+                        <a class="collapse-item" href="#">Doanh số</a>
+
+                    </div>
                 </div>
-            </div>
             </li>
 
             <!-- Nav Item - Tables -->
