--- a/WebPhongKhamNhi/Views/HoSoKham/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/HoSoKham/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Xóa</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc muốn xóa hồ sơ khám này không?</h3>
 <div>
-    <h4>Hosokham</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -29,23 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NgayTao)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaBacSiNavigation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaBacSiNavigation.HoTen)
-        </dd class>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaBenhNhanNavigation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaBenhNhanNavigation.DiaChi)
-        </dd class>
+        
     </dl>
     
     <form asp-action="DeletePost">
         <input type="hidden" asp-for="MaHoSo" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" /> |
+        <a asp-action="Index">Danh sách hồ sơ khám</a>
     </form>
 </div>
