--- a/WebPhongKhamNhi/Views/HoSoKham/Edit.cshtml
+++ b/WebPhongKhamNhi/Views/HoSoKham/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Chỉnh sửa</h1>
 
-<h4>Hosokham</h4>
+<h4>Hồ sơ khám của @Model.MaBenhNhanNavigation.HoTen</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -29,24 +29,19 @@
                 <span asp-validation-for="NgayTao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaBacSi" class="control-label"></label>
-                <select asp-for="MaBacSi" class="form-control" asp-items="ViewBag.MaBacSi"></select>
-                <span asp-validation-for="MaBacSi" class="text-danger"></span>
+                <label class="control-label">Tên bác sĩ</label><br/>
+                @Html.DropDownList("MaBacSi", new SelectList(ViewBag.BacSi, "MaBacSi", "HoTen"), String.Empty, new { @Class = "form-control" })
+                <span asp-validation-for="NgayTao" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MaBenhNhan" class="control-label"></label>
-                <select asp-for="MaBenhNhan" class="form-control" asp-items="ViewBag.MaBenhNhan"></select>
-                <span asp-validation-for="MaBenhNhan" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Lưu" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Danh sách hồ sơ khám</a>
 </div>
 
 @section Scripts {
