--- a/WebPhongKhamNhi/Views/Shared/_AdminLayout.cshtml
+++ b/WebPhongKhamNhi/Views/Shared/_AdminLayout.cshtml
@@ -89,7 +89,42 @@
                     </div>
                 </div>
             </li>
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#dichvu"
+                   aria-expanded="true" aria-controls="collapseUtilities">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Quản lý dịch vụ</span>
+                </a>
+                <div id="dichvu" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Quản lý:</h6>
+                        <a class="collapse-item" href="/DichVuKham">Dịch vụ khám</a>
+                        <a class="collapse-item" href="/DichVuXetNghiem">Dịch vụ xét nghiệm</a>
 
+                    </div>
+                </div>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#thuoc"
+                   aria-expanded="true" aria-controls="collapseUtilities">
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Quản lý nhập/bán thuốc</span>
+                </a>
+                <div id="thuoc" class="collapse" aria-labelledby="headingUtilities"
+                     data-parent="#accordionSidebar">
+                    <div class="bg-white py-2 collapse-inner rounded">
+                        <h6 class="collapse-header">Nhập thuốc:</h6>
+                        <a class="collapse-item" href="/PhieuNhapThuoc">Nhập thuốc</a>
+                        <a class="collapse-item" href="/NhaSanXuat">Nhà sản xuất</a>
+                        <a class="collapse-item" href="/Thuoc">Thuốc</a>
+                        <h6 class="collapse-header">Bán thuốc:</h6>
+                        <a class="collapse-item" href="/HoaDonThuoc">Hóa đơn thuốc</a>
+                        
+                    </div>
+                </div>
+            </li>
             <!-- Divider -->
             @*<hr class="sidebar-divider">*@
 
@@ -109,12 +144,7 @@
                 </a>
             </li>
 
-            <li class="nav-item">
-                <a class="nav-link" href="/DichVuKham">
-                    <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Dịch vụ khám</span>
-                </a>
-            </li>
+
 
             <!-- Nav Item - Pages Collapse Menu -->
             <li class="nav-item">
