--- a/WebPhongKhamNhi/Views/DichVuXetNghiem/Create.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuXetNghiem/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model WebPhongKhamNhi.Models.Dichvuxetnghiem
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Tạo mới dịch vụ xét nghiệm";
 }
 
-<h1>Create</h1>
 
-<h4>Dichvuxetnghiem</h4>
+
+<h1>Tạo dịch vụ xét nghiệm</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
