--- a/WebPhongKhamNhi/Views/DichVuXetNghiem/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/DichVuXetNghiem/Delete.cshtml
@@ -1,24 +1,23 @@
 ﻿@model WebPhongKhamNhi.Models.Dichvuxetnghiem
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa dịch vụ xét nghiệm";
 }
 
-<h1>Delete</h1>
+<h1>Xóa </h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn xóa không</h3>
 <div>
-    <h4>Dichvuxetnghiem</h4>
-    <hr />
+   
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TenXetNghiem)
+            Tên xét nghiệm
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.TenXetNghiem)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ChiPhi)
+            Chi phí
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ChiPhi)
@@ -27,7 +26,7 @@
     
     <form asp-action="DeletePost">
         <input type="hidden" asp-for="MaXetNghiem" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Xóa" class="btn btn-danger" /> |
+        <a asp-action="Index">Quay lại</a>
     </form>
 </div>
