--- a/WebPhongKhamNhi/Views/DonThuoc/CreateDonThuocTheoHoSo.cshtml
+++ b/WebPhongKhamNhi/Views/DonThuoc/CreateDonThuocTheoHoSo.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebPhongKhamNhi.Models.Donthuoc
 
 @{
-    ViewData["Title"] = "CreateDonThuocTheoHoSo";
+    ViewData["Title"] = "Tạo đơn thuốc";
 }
 
-<h1>CreateDonThuocTheoHoSo</h1>
+<h1>Thêm đơn thuốc theo hồ sơ</h1>
 
 <h4>Donthuoc</h4>
 <hr />
@@ -31,14 +31,14 @@
 
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Thêm" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="GetDonThuocTheoHoSo" asp-route-id="@ViewBag.MaHoSo">Back to List</a>
+    <a asp-action="GetDonThuocTheoHoSo" asp-route-id="@ViewBag.MaHoSo">Quay về danh sách đơn thuốc</a>
 </div>
 
 @section Scripts {
