--- a/WebPhongKhamNhi/Views/DonThuoc/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/DonThuoc/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebPhongKhamNhi.Models.Donthuoc
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
 }
 
 <h1>Xóa</h1>
@@ -12,24 +12,18 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TenDonThuoc)
+            Tên đơn thuốc
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TenDonThuoc)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MaHoSoNavigation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MaHoSoNavigation.MaHoSo)
-        </dd>
+        </dd>        
     </dl>
 
     <form asp-action="DeletePost">
         <input type="hidden" name="mahoso" value="@Model.MaHoSo" />
         <input type="hidden" asp-for="MaDonThuoc" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Xóa" class="btn btn-danger" /> |
 
     </form>
-    <a asp-action="GetDonThuocTheoHoSo" asp-route-id="@Model.MaHoSo">Back to List</a>
+    <a asp-action="GetDonThuocTheoHoSo" asp-route-id="@Model.MaHoSo">Quay lại danh sách</a>
 </div>
