--- a/WebPhongKhamNhi/Views/PhieuXetNghiem/Delete.cshtml
+++ b/WebPhongKhamNhi/Views/PhieuXetNghiem/Delete.cshtml
@@ -1,34 +1,28 @@
 ﻿@model WebPhongKhamNhi.Models.Phieuxetnghiem
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa";
 }
 
-<h1>Delete</h1>
+<h1>Xóa</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có muốn xóa không?</h3>
 <div>
-    <h4>Phieuxetnghiem</h4>
-    <hr />
+    
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.NgayThanhToan)
+           Ngày thanh toán
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NgayThanhToan)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.TongTien)
+            Tổng tiền
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.TongTien)
         </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.MaHoSoNavigation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.MaHoSoNavigation.MaHoSo)
-        </dd>
+        
     </dl>
 
     <form asp-action="DeletePost">
@@ -37,5 +31,5 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
 
     </form>
-    <a asp-action="GetPXNTheoHoSo" asp-route-id="@Model.MaHoSo">Back to List</a>
+    <a asp-action="GetPXNTheoHoSo" asp-route-id="@Model.MaHoSo">Quay lại danh sách phiếu xét nghiệm</a>
 </div>
